add - istio sample file

--- a/istio/istio-test01-pod.yaml
+++ b/istio/istio-test01-pod.yaml
@@ -36,5 +36,5 @@ spec:
           periodSeconds: 20
 #add nodeSelector
       nodeSelector:
-        Node-Name: "MPUBNode01"
+        nodegroup-type: "frontend-workloads"
         
