add - istio sample file

--- a/istio/istio-test01-pod.yaml
+++ b/istio/istio-test01-pod.yaml
@@ -17,7 +17,7 @@ spec:
         app: istio-test-pod
     spec:
       containers:
-      - image: 507115347197.dkr.ecr.ap-northeast-2.amazonaws.com/network-multitool
+#      - image: 507115347197.dkr.ecr.ap-northeast-2.amazonaws.com/network-multitool
       - image: whchoi98/network-multitool
         imagePullPolicy: Always
         name: istio-test-pod
