--- a/network-test/clb-test-01.yaml
+++ b/network-test/clb-test-01.yaml
@@ -36,5 +36,5 @@ spec:
           periodSeconds: 20
 #add nodeSelector
       nodeSelector:
-        nodegroup-type: "frontend-workloads"
+        nodegroup-type: "managed-frontend-workloads"
         
