--- a/network-test/cluster-test-01.yaml
+++ b/network-test/cluster-test-01.yaml
@@ -35,4 +35,4 @@ spec:
           periodSeconds: 20
   #add nodeSelector
       nodeSelector:
-        nodegroup-type: "frontend-workloads"      
+        nodegroup-type: "managed-frontend-workloads"      
