--- a/network-test/nlb-test-01.yaml
+++ b/network-test/nlb-test-01.yaml
@@ -36,6 +36,6 @@ spec:
           periodSeconds: 20
 #add nodeSelector
       nodeSelector:
-        nodegroup-type: "frontend-workloads"
+        nodegroup-type: "managed-frontend-workloads"
 
         
