--- a/network-test/alb-ing-04.yaml
+++ b/network-test/alb-ing-04.yaml
@@ -36,7 +36,7 @@ spec:
           periodSeconds: 20
 #add nodeSelector
       nodeSelector:
-        nodegroup-type: "backend-workloads"
+        nodegroup-type: "managed-backend-workloads"
 
 
         
