--- a/EKSVPC3AZ_Karpenter.yml
+++ b/EKSVPC3AZ_Karpenter.yml
@@ -190,50 +190,50 @@ Resources:
       - Key: kubernetes.io/role/elb
         Value: 1
 
-#  PublicSubnet04:
-#    Type: AWS::EC2::Subnet
-#    Metadata:
-#      Comment: Public Subnet 04
-#    Properties:
-#      VpcId: !Ref VPC
-#      CidrBlock: !Ref PublicSubnet04Block
-#      AvailabilityZone: !Ref AvailabilityZoneA
-#      MapPublicIpOnLaunch: "true"
-#      Tags:
-#      - Key: Name
-#        Value: !Sub "${AWS::StackName}-PublicSubnet04"
-#      - Key: kubernetes.io/role/elb
-#        Value: 1
-#
-#  PublicSubnet05:
-#    Type: AWS::EC2::Subnet
-#    Metadata:
-#      Comment: Public Subnet 05
-#    Properties:
-#      VpcId: !Ref VPC
-#      CidrBlock: !Ref PublicSubnet05Block
-#      AvailabilityZone: !Ref AvailabilityZoneB
-#      MapPublicIpOnLaunch: "true"
-#      Tags:
-#      - Key: Name
-#        Value: !Sub "${AWS::StackName}-PublicSubnet05"
-#      - Key: kubernetes.io/role/elb
-#        Value: 1
-#
-#  PublicSubnet06:
-#    Type: AWS::EC2::Subnet
-#    Metadata:
-#      Comment: Public Subnet 06
-#    Properties:
-#      VpcId: !Ref VPC
-#      CidrBlock: !Ref PublicSubnet06Block
-#      AvailabilityZone: !Ref AvailabilityZoneC
-#      MapPublicIpOnLaunch: "true"
-#      Tags:
-#      - Key: Name
-#        Value: !Sub "${AWS::StackName}-PublicSubnet06"
-#      - Key: kubernetes.io/role/elb
-#        Value: 1
+  PublicSubnet04:
+    Type: AWS::EC2::Subnet
+    Metadata:
+      Comment: Public Subnet 04
+    Properties:
+      VpcId: !Ref VPC
+      CidrBlock: !Ref PublicSubnet04Block
+      AvailabilityZone: !Ref AvailabilityZoneA
+      MapPublicIpOnLaunch: "true"
+      Tags:
+      - Key: Name
+        Value: !Sub "${AWS::StackName}-PublicSubnet04"
+      - Key: kubernetes.io/role/elb
+        Value: 1
+
+  PublicSubnet05:
+    Type: AWS::EC2::Subnet
+    Metadata:
+      Comment: Public Subnet 05
+    Properties:
+      VpcId: !Ref VPC
+      CidrBlock: !Ref PublicSubnet05Block
+      AvailabilityZone: !Ref AvailabilityZoneB
+      MapPublicIpOnLaunch: "true"
+      Tags:
+      - Key: Name
+        Value: !Sub "${AWS::StackName}-PublicSubnet05"
+      - Key: kubernetes.io/role/elb
+        Value: 1
+
+  PublicSubnet06:
+    Type: AWS::EC2::Subnet
+    Metadata:
+      Comment: Public Subnet 06
+    Properties:
+      VpcId: !Ref VPC
+      CidrBlock: !Ref PublicSubnet06Block
+      AvailabilityZone: !Ref AvailabilityZoneC
+      MapPublicIpOnLaunch: "true"
+      Tags:
+      - Key: Name
+        Value: !Sub "${AWS::StackName}-PublicSubnet06"
+      - Key: kubernetes.io/role/elb
+        Value: 1
 #####################################################################
 # Create-Public-RouteTable:
 #####################################################################
