--- a/EKSVPC3AZ_Karpenter.yml
+++ b/EKSVPC3AZ_Karpenter.yml
@@ -273,13 +273,13 @@ Resources:
     Type: AWS::EC2::SubnetRouteTableAssociation
     Properties:
       SubnetId: !Ref PublicSubnet04
-      RouteTableId: !Ref PublicRouteTabl#e
+      RouteTableId: !Ref PublicRouteTable
 
   PublicSubnet05RouteTableAssociation:
     Type: AWS::EC2::SubnetRouteTableAssociation
     Properties:
       SubnetId: !Ref PublicSubnet05
-      RouteTableId: !Ref PublicRouteTabl#e
+      RouteTableId: !Ref PublicRouteTable
 
   PublicSubnet06RouteTableAssociation:
     Type: AWS::EC2::SubnetRouteTableAssociation
