--- a/fargate/fargate.yml
+++ b/fargate/fargate.yml
@@ -14,6 +14,11 @@ fargateProfiles:
 #      - namespace: kube-system
   - name: fargate-profile-01
     selectors:
-      - namespace: fargate
+      - namespace: fargate-01
         labels:
-          env: fargate
+          env: fargate-01
+  - name: fargate-profile-02
+    selectors:
+      - namespace: fargate-02
+        labels:
+          env: fargate-02
