--- a/fargate/fargate.yml
+++ b/fargate/fargate.yml
@@ -3,12 +3,12 @@ apiVersion: eksctl.io/v1alpha5
 kind: ClusterConfig
 
 metadata:
-#  name: ${ekscluster_name}
-#  region: ${AWS_REGION}
+#  name: "${ekscluster_name}""
+#  region: "${AWS_REGION}""
 #  version: "${eks_version}"  
-  name: eksworkshop
-  region: ap-northeast-2
-  version: 1.21
+  name: "eksworkshop"
+  region: "ap-northeast-2"
+  version: "1.21"
 
 fargateProfiles:
 #  - name: fp-default
