--- a/fargate/fargate-deploy-01.yml
+++ b/fargate/fargate-deploy-01.yml
@@ -2,27 +2,27 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: "fargate"
+  name: "fargate-01"
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: "fargate"
+  name: "fargate-01"
   labels:
     app: "fargate-01"
-    env: "fargate"
-  namespace: "fargate"
+    env: "fargate-01"
+  namespace: "fargate-01"
 spec:
   replicas: 6
   selector:
     matchLabels:
       app: "fargate-01"
-      env: "fargate"
+      env: "fargate-01"
   template:
     metadata:
       labels:
         app: "fargate-01"
-        env: "fargate"
+        env: "fargate-01"
     spec:
       containers:
       - image: whchoi98/network-multitool
@@ -45,8 +45,8 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: "fargate-01"
-  namespace: "fargate"
+  name: "fargate-01-service"
+  namespace: "fargate-01"
 spec:
   selector:
     app: fargate-01
@@ -59,8 +59,8 @@ spec:
 apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
-  name: "fargate-01"
-  namespace: "fargate"
+  name: "ingress-fargate-01"
+  namespace: "fargate-01"
   annotations:
     kubernetes.io/ingress.class: alb
     alb.ingress.kubernetes.io/load-balancer-name: alb-ingress-fg-01
@@ -72,5 +72,5 @@ spec:
         paths:
           - path: /*
             backend:
-              serviceName: "fargate-01"
+              serviceName: "fargate-01-service"
               servicePort: 80
