add yaml - fargate.yaml & fargate-deploy-01.yaml, fargate-deploy-02.yaml

--- a/fargate/fargate-deploy-01.yml
+++ b/fargate/fargate-deploy-01.yml
@@ -49,7 +49,7 @@ metadata:
   namespace: "fargate-01"
 spec:
   selector:
-    app: fargate-01
+    app: "fargate-01"
   type: NodePort
   ports:
    -  protocol: TCP
