--- a/alb-controller/2048-ingress.yaml
+++ b/alb-controller/2048-ingress.yaml
@@ -1,4 +1,4 @@
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: "2048-ingress"
@@ -13,7 +13,9 @@ spec:
   rules:
     - http:
         paths:
-          - path: /*
+          - pathType: ImplementationSpecific
             backend:
-              serviceName: "service-2048"
-              servicePort: 80
+              service:
+                name: "service-2048"
+                port: 
+                  number: 80
