--- a/alb-controller/2048_full.yaml
+++ b/alb-controller/2048_full.yaml
@@ -40,7 +40,7 @@ spec:
   selector:
     app.kubernetes.io/name: app-2048
 ---
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   namespace: game-2048
@@ -53,7 +53,9 @@ spec:
   rules:
     - http:
         paths:
-          - path: /*
+          - pathType: ImplementationSpecific
             backend:
-              serviceName: service-2048
-              servicePort: 80
+              service:
+                name: "service-2048"
+                port: 
+                  number: 80
