--- a/ingress/v1.22/alb-ing-04-service.yaml
+++ b/ingress/v1.22/alb-ing-04-service.yaml
@@ -4,11 +4,17 @@ metadata:
   name: alb-ing-04
   annotations:
     service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
+#    service.beta.kubernetes.io/aws-load-balancer-internal: "true"
     service.beta.kubernetes.io/aws-load-balancer-type: "external"
     service.beta.kubernetes.io/aws-load-balancer-name: "alb-ing-04"
     service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "ip"
+#    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "instance"
+    service.beta.kubernetes.io/aws-load-balancer-target-group-attributes: preserve_client_ip.enabled=true
+#    service.beta.kubernetes.io/aws-load-balancer-scheme: "internal"
+    service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
   namespace: alb-ing-04
 spec:
+  externalTrafficPolicy: Local
   selector:
     app: alb-ing-04
   type: LoadBalancer
