--- a/helm-chart-demo/ecsdemo-frontend-service.yaml
+++ b/helm-chart-demo/ecsdemo-frontend-service.yaml
@@ -2,6 +2,14 @@ apiVersion: v1
 kind: Service
 metadata:
   name: ecsdemo-frontend
+  annotations:
+#    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
+#    service.beta.kubernetes.io/aws-load-balancer-type: external
+#    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
+#    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "instance"
+#    service.beta.kubernetes.io/aws-load-balancer-internal: "true"
+    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
+    service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
 #name space change 
   namespace: {{ .Values.namespace }}
 spec:
