--- a/EKSVPC3AZ.yml
+++ b/EKSVPC3AZ.yml
@@ -36,17 +36,17 @@ Parameters:
   AvailabilityZoneA:
     Description: "Choose AZ1 for your VPC."
     Type: AWS::EC2::AvailabilityZone::Name
-    Default: "ap-northeast-2a"
+    Default: "us-west-2a"
 
   AvailabilityZoneB:
     Description: "Choose AZ2 for your VPC."
     Type: AWS::EC2::AvailabilityZone::Name
-    Default: "ap-northeast-2b"
+    Default: "us-west-2b"
 
   AvailabilityZoneC:
     Description: "Choose AZ1 for your VPC."
     Type: AWS::EC2::AvailabilityZone::Name
-    Default: "ap-northeast-2c"
+    Default: "us-west-2c"
 
   PublicSubnet01Block:
     Type: String
