--- a/network-test/nlb-test-03.yaml
+++ b/network-test/nlb-test-03.yaml
@@ -49,7 +49,7 @@ metadata:
   name: nlb-test-03-svc
   annotations:
     service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
-    service.beta.kubernetes.io/aws-load-balancer-name: "nlb-test-03-svc"
+#    service.beta.kubernetes.io/aws-load-balancer-name: "nlb-test-03-svc"
 #    service.beta.kubernetes.io/aws-load-balancer-type: external
 #    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
 #    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "instance"
