--- a/network-test/nlb-test-03-service.yaml
+++ b/network-test/nlb-test-03-service.yaml
@@ -1,22 +1,28 @@
+---
 apiVersion: v1
 kind: Service
 metadata:
-  name: nlb-test-02-svc
+  name: nlb-test-03-svc
   annotations:
-    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
+#    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
+#    service.beta.kubernetes.io/aws-load-balancer-name: "nlb-test-03-svc"
 #    service.beta.kubernetes.io/aws-load-balancer-type: external
 #    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
 #    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "instance"
 #    service.beta.kubernetes.io/aws-load-balancer-internal: "true"
-    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
-    service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
-  namespace: nlb-test-02
+    service.beta.kubernetes.io/aws-load-balancer-scheme: "internal"
+#    service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
+    service.beta.kubernetes.io/aws-load-balancer-type: "nlb-ip"
+    service.beta.kubernetes.io/aws-load-balancer-internal: "true"
+    service.beta.kubernetes.io/aws-load-balancer-private-ipv4-addresses: "10.1.21.201, 10.1.22.201"
+    service.beta.kubernetes.io/aws-load-balancer-subnets: "subnet-0db4574d3204c5665, subnet-0239b41dd0b86bc4f"
+  namespace: nlb-test-03
 spec:
   externalTrafficPolicy: Local
   selector:
-    app: nlb-test-02
+    app: nlb-test-03
   type: LoadBalancer
   ports:
    -  protocol: TCP
-      port: 8080
+      port: 80
       targetPort: 80
