add alb ingressclass

--- a/alb-controller/2048_full.yaml
+++ b/alb-controller/2048_full.yaml
@@ -50,6 +50,7 @@ metadata:
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/target-type: ip
 spec:
+  ingressClassName: alb
   rules:
     - http:
         paths:
