--- a/alb-controller/alb_front_full.yaml
+++ b/alb-controller/alb_front_full.yaml
@@ -62,10 +62,10 @@ metadata:
   name: ecsdemo-frontend
   namespace: alb-test
   annotations:
-    kubernetes.io/ingress.class: alb
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/target-type: ip
 spec:
+  ingressClassName: alb
   rules:
     - http:
         paths:
