--- a/alb-controller/fargate_2048_full.yaml
+++ b/alb-controller/fargate_2048_full.yaml
@@ -46,10 +46,10 @@ metadata:
   namespace: fargate-game-2048
   name: ingress-2048
   annotations:
-    kubernetes.io/ingress.class: alb
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/target-type: ip
 spec:
+  ingressClassName: alb
   rules:
     - http:
         paths:
